<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">MobileOrgActivity</string>
  <string name="menu_outline">Outline</string>
  <string name="menu_capture">Capture</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_sync">Sync</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_search">Search</string>
  <string name="menu_help">Help</string>
  <string name="menu_cancel">Cancel</string>
  <string name="menu_addtag">Add Tag</string>
  <string name="menu_adddeadline">Add Deadline</string>
  <string name="menu_addscheduled">Add Scheduled</string>
  <string name="menu_timestamp">Add Timestamp</string>
  <string name="contextmenu_edit">Edit Node</string>
  <string name="contextmenu_view">View Node</string>
  <string name="contextmenu_delete">Delete File</string>
  <string name="contextmenu_node_delete">Delete Node</string>
  
  <string name="sync_wait">Synchronizing, please wait…</string>
  <string name="sync_failed">Synchronization failed, try again?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="ok">OK</string>
  <string name="empty_main">You have not yet\nsynchronized your Org files</string>
  <string name="error_bad_url">The url %s is not properly formatted</string>
  <string name="error_dialog_title">Error</string>
  <string name="node_edit_prompt">Are you sure you want to discard changes?</string>
  <string name="node_view_error_loading_node">Error loading node</string>
  <string name="sync_not_configured">Sync not configured</string>
  <string name="sync_error_occured">Error occured during sync:</string>
  <string name="sync_synchronizing_changes">Synchronizing changes</string>
  <string name="sync_error_server_certificate">Error with server certificate:</string>
  <string name="downloading">Downloading</string>
  <string name="outline_delete_prompt">Are you sure you want to delete?</string>
  <string name="outline_synchronization_successful">Synchronization Successful</string>

  <string name="error_sqlio">There was a problem reading from the database, is your drive corrupted or is the SDCard mounted?</string>
  <string name="error_generic_database">Unhandled database error: %s</string>
  <string name="error_file_not_found">The file %s was not found</string>
  <string name="error_file_permissions">Permissions error on file %s</string>
  <string name="error_file_read">An error occurred while reading from file %s</string>
  <string name="error_file_write">An error occurred while writing to file %s</string>
  <string name="error_invalid_url">URL Contains Invalid Characters: %s</string>
  <string name="error_synchronizer_type_unknown">Unknown Synchronizer Method %s"</string>
  <string name="error_local_storage_method_unknown">Local storage method %s unknown</string>
  <string name="error_unsupported_encoding">Encountered unsupported encoding on file %s</string>
  <string name="error_url_fetch">An error occurred attempting to fetch the url %s</string>
  <string name="error_url_fetch_detail">An error occurred attempting to fetch the url %1$s: %2$s</string>
  <string name="error_url_put_detail">An error occurred attempting to upload the url %1$s: %2$s</string>
  <string name="error_opening_database">An error occurred attempting to create database.  Check your storage settings in the preferences menu, and make sure your storage card is available</string>
  <string name="error_url_put">An error occurred while attempting to put the URL %s</string>
  <string name="error_setting_no_calendar">NO CALENDAR</string>
  <string name="dropbox_fetch_error">There was an issue reading the dropbox path %1$s: %2$s</string>
  <string name="apg_not_found">APG not found</string>
  <string name="apg_version_not_supported">APG version not supported</string>
  <string name="view_as_document">View as document</string>
  <string name="title">Title</string>
  <string name="body">Click here to set the body text</string>
  <string name="tags">Tags</string>
  <string name="priority">Priority</string>
  <string name="todo_state">Todo state</string>
  <string name="back">Back</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>  
  <string name="search_hint">Search</string>
  <string name="warning">WARNING!</string>
  <string name="cert_changed">The WebDAV Certificate has changed, below are the details.  If you are okay with this click \'Accept\' otherwise click \'Deny\'.  If you accept the new certificate you will need to re-issue your Synchronize command</string>
  <string name="accept">Accept</string>
  <string name="deny">Deny</string>

  <string name="sync_plugin">MobileOrg Synchronization</string>
  <string name="sync_plugin_info">This plugin allows you to trigger a MobileOrg Sync from Locale or Tasker.  If you are okay with this click \'Accept\' otherwise click \'Deny\'</string>
  <string name="sync_plugin_message">Synchronize</string>

  <!-- setup wizard strings -->
  <string name="up_one_level">Up one level</string>
  <string name="please_wait">Please wait…</string>
  <string name="signing_in">Signing in</string>
  <string name="pick_folder">Choose a folder to sync from:</string>
  <string name="email">Email</string>
  <string name="username">Username</string>
  <string name="password">password</string>
  <string name="host">Host</string>
  <string name="port">Port</string>
  <string name="path">Path</string>
  <string name="login">Log in</string>
  <string name="login_webdav">Check Login</string>
  <string name="login_ssh">Check SSH Login</string>
  <string name="i_want_to_sync_using">I want to sync using:</string>
  <string name="wizard_webdav">a WebDAV server</string>
  <string name="wizard_dropbox">a Dropbox account</string>
  <string name="wizard_sdcard">my SD card</string>
  <string name="wizard_ssh">an SSH server</string>
  <string name="wizard_null">nothing (capture only)</string>
  <string name="log_in_to_dropbox">Log in to Dropbox</string>
  <string name="log_in_to_webdav">Log in to your WebDAV server</string>
  <string name="log_in_to_ssh">Log in to your SSH server</string>
  <string name="null_sync_description">This is a capture only synchronizer.  It will not attempt to synchronize to any source.</string>
  <string name="url">URL</string>
  <string name="wizard_dropbox_email_hint">uri@frankandrobot.com</string>
  
    <!-- preference strings -->
  <string name="title_capture_with_timestamp">Capture with Timestamp</string>
  <string name="summary_capture_with_timestamp">Captured nodes will have a timestamp added</string>
  <string name="title_agenda_title">Use agenda titles</string>
  <string name="summary_agenda_title">Enables use of custom agenda titles. Needs resync of agenda file to take effect</string>
  <string name="title_do_auto_sync">Background Sync</string>
  <string name="summary_do_auto_sync">Automatically synchronize MobileOrg database in the background</string>
  <string name="title_auto_sync_interval">Background Sync Interval</string>
  <string name="summary_auto_sync_interval">How often the background sync service should run</string>
  <string name="title_view_wrap_lines">Wrap Lines</string>
  <string name="summary_view_wrap_lines">Using custom line wrapping when viewing nodes</string>
  <string name="preference_default_todo_summary">Default todo when capturing files</string>
  <string name="preference_default_todo_title">Default todo</string>
  <string name="preference_clean_up_db_summary">Clean up the storage database</string>
  <string name="preference_clean_up_db_title">Clear Database</string>
  <string name="preferences_widget_summary">Preferences for a Widget</string>
  <string name="preference_widget_title">Widget Preferences</string>
  <string name="preference_other">Other</string>
  <string name="preference_version">Version</string>
  <string name="preference_storage_summary">Where to store the org files</string>
  <string name="preference_storage_title">Storage Mode</string>
  <string name="preference_storage">Storage</string>
  <string name="preference_recursion_level_title">Recursion Level</string>
  <string name="preference_recursion_level_summary">How many levels of child nodes to display on view</string>
  <string name="preference_viewing">Viewing</string>
  <string name="preference_synchronization">Synchronization</string>
  <string name="preference_sync_source_summary">Where to sync Org files from</string>
  <string name="preference_sync_source_title">Synchronization Mode</string>
  <string name="preference_dropbox_login">Login</string>
  <string name="preference_dropbox_login_summary">Login to retrieve an OAuth token</string>
  <string name="preference_dropbox_path">Path</string>
  <string name="preference_dropbox_path_summary">Dropbox path to index.org file</string>
  <string name="preference_clear_db_dialog_title">Clear DB?</string>
  <string name="preference_clear_db_dialog_message">Are you sure want to clear DB?</string>
  <string name="preference_combine_block_agenda_summary">Combines block agendas into one node, with separators. Needs resync of agenda file to take effect</string>
  <string name="preference_combine_block_agenda_title">Combine block agendas</string>
  <string name="preference_calendar">Calendar</string>
  <string name="preference_calendar_clear">Clear phone calendar</string>
  <string name="preference_calendar_clear_summary">Clears the phones\' calendar of all entries inserted by MobileOrg</string>
  <string name="preference_calendar_synch">Enables synchronization of scheduled items to phones\' calendar. All calendar related items require a re-sync to take effect.</string>
  <string name="preference_calendar_synch_title">Calendar Synchronization</string>
  <string name="preference_calendar_name_summary">Choose calendar MobileOrg will use</string>
  <string name="preference_calendar_name">Calendar Name</string>
  <string name="preference_clear_calendar_promt">Clear phone calendar</string>
  <string name="preference_clear_calendar_promt_message">Are you sure you want to clear the phones\' calendar?</string>
  <string name="preference_calendar_reminder_summary">Add reminders for scheduled items to calendar</string>
  <string name="preference_calendar_reminder">Reminders</string>
  <string name="preference_calendar_reminder_interval_summary">Sets the interval when an alarm is triggered</string>
  <string name="preference_calendar_reminder_interval">Reminder Interval</string>
  <string name="preference_calendar_show_habits_summary">Shows habits in the calendar</string>
  <string name="preference_calendar_show_habits">Show habits</string>
  <string name="preference_calendar_show_done_summary">Show done items in the calendar</string>
  <string name="preference_calendar_show_done">Show done</string>
  <string name="edit_date_start">Start</string>
  <string name="edit_date_end">End</string>
  <string name="edit_date_date">Date</string>
  <string name="email_address">email address</string>
  <string name="done">Done</string>
  <string name="date">Date</string>  
</resources>
