<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="Logo"
        android:paddingBottom="20dp"
        android:src="@drawable/logo" />

    <RadioGroup
        android:id="@+id/sync_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:text="@string/i_want_to_sync_using"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/sync_webdav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wizard_webdav"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/sync_dropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_dropbox"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/sync_ssh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_ssh"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/sync_sdcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_sdcard"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/sync_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wizard_null"
            android:textSize="18dp" />
    </RadioGroup>

</LinearLayout>